Trying to make 3000 work

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "spacex-dashboard",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "\"A Dashboard for SpaceX stats\"",
   "main": "server.js",
   "scripts": {
-    "test": "\"echo \\\"Error: no test specified\\\" && exit 1\""
+    "test": "\"echo \"Error: no test specified\" && exit 1\""
   },
   "repository": {
     "type": "git",
